# toothbrush

./: .gitignore  .gitmodules  README.md  check_accel.py  check_buzzer.py  install_unix.sh  pyproject.toml
.github/workflows/: build.yaml
data/jonnor-brushing-1/: config.yaml  config_custom.yaml
data/jonnor-brushing-1/testdata/: VID_20241231_154514.mkv.npy  VID_20241231_155624.mkv.npy  VID_20241231_163515.mkv.npy  VID_20241231_164646.mkv.npy
doc/: TODO.md  data_collection.md  labeling.xml  notes.md  states.mermaid
firmware/: buzzer_music.py  core.py  lsm6ds.py  main.py  make_vfs.py  process.py  test_toothbrush.py
mechanics/: toothbrush-dml20m.FCStd  toothbrush-dml21m.FCStd  toothbrush-dml21m2.FCStd  toothbrush-flex.FCStd  toothbrush-handle-print.stl  toothbrush-handle.FCStd  toothbrush-stand.FCStd
notebooks/: Evaluation.ipynb  Sequences.ipynb  XIAO.ipynb
software/dataset/: combine.py  hussain2021.py  labeling_prepare.py
software/features/: orientation.py
software/model/: evaluate.py
software/utils/: server.py
